# spaceflib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  resources.bib  suppressvalgrind.txt  to_default_svg.sh
docs/: 16000.0001.heap  16000.prof  160000.0001.heap  160000.0002.heap  160000.prof  32000.0001.heap  32000.prof  320000.0001.heap  320000.0002.heap  320000.0003.heap  320000.prof  400.0001.heap  400.prof  4000.0001.heap  4000.prof  400000.0001.heap  400000.0002.heap  400000.0003.heap  400000.prof  8000.0001.heap  8000.prof  80000.0001.heap  80000.prof  CMakeLists.txt  commands.txt  star.0001.heap  star.prof
examples/: 16000.dot  160000.dot  32000.dot  400.dot  4000.dot  8000.dot  80000.dot  graph1  star.dot
examples/old/: 4000_old.dot  8000_old.dot  oldgraph.dot
src/: CMakeLists.txt  commondefinitions.h  fgraph.cpp  fgraph.hpp  graph.cpp  graph.hpp  misc.cpp  misc.hpp
test/: CMakeLists.txt  graph_generator.py  graphs.hpp  print_graph.cpp  random_graph_generator.py  test_graph.cpp  test_main.cpp  test_main.hpp  test_misc.cpp  test_misc_size.cpp
